[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agere"
authors = [
  { name="Xueao Chao", email="chaoxueao@gmail.com" },
]
description = "The tool is used for building and driving workflows specifically tailored for AI initiatives. It can be used to construct AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
keywords = ["agents", "AI"]
dependencies = []

[project.urls]
Homepage = "https://github.com/happyapplehorse/agere"
Issues = "https://github.com/happyapplehorse/agere/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = "src"

[tool.setuptools.dynamic]
version = {attr = "agere.__version__"}
